<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.jq.assignment4_androidui.MainActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_link1"
        android:id="@+id/Layout1"
        android:layout_margin="5dp"
        android:textSize="45sp"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorTextPrimaryLight"
        android:onClick="activity1"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_link2"
        android:id="@+id/Layout2"
        android:layout_margin="5dp"
        android:textSize="45sp"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorTextPrimaryLight"
        android:onClick="activity2"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_link3"
        android:id="@+id/Layout3"
        android:layout_margin="5dp"
        android:textSize="45sp"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorTextPrimaryLight"
        android:onClick="activity3"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_link4"
        android:id="@+id/Layout4"
        android:layout_margin="5dp"
        android:textSize="45sp"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorTextPrimaryLight"
        android:onClick="activity4"/>

</LinearLayout>
